--- a/tests/bootstrap.php.dist
+++ b/tests/bootstrap.php.dist
@@ -1,12 +1,10 @@
 <?php
 
-require_once __DIR__.'/../src/ClassLoader/UniversalClassLoader.php';
+$filename = __DIR__.'/../vendor/autoload.php';
 
-use ClassLoader\UniversalClassLoader;
+if (!file_exists($filename)) {
+    echo 'You must first install the vendors using composer.'.PHP_EOL;
+    exit(1);
+}
 
-$loader = new UniversalClassLoader();
-$loader->registerNamespaces(array(
-    'Ssh' => __DIR__.'/../src'
-));
-
-$loader->register();
+require_once $filename;
