--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
         "php": ">=5.3.2",
         "ext-ssh2": "*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*"
+    },
     "autoload": {
         "psr-0": {
             "Ssh": "src/"
