--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ php:
   - 5.4
 
 before_script:
-  - sudo apt-get install libssh2-1-dev libssh2-php
-  - sudo pecl install -f ssh2 < .noninteractive
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq libssh2-1-dev libssh2-php
+  - sudo pecl install -f ssh2-beta < .noninteractive
   - echo "extension=ssh2.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
   - php -m | grep ssh2
   - composer self-update
