--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,16 @@ language: php
 php:
   - 5.3
   - 5.4
+  - 5.5
+  - 5.6
+ 
+matrix:
+  allow_failures:
+    - php: 5.6
 
 before_script:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq libssh2-1-dev libssh2-php
-  - sudo pecl install -f ssh2-beta < .noninteractive
-  - echo "extension=ssh2.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
+  - sudo apt-get install -y -qq libssh2-1-dev libssh2-php
+  - pecl install -f ssh2-beta < .noninteractive
   - php -m | grep ssh2
   - composer self-update
   - composer install --dev
