First try on functional testing.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,4 +22,10 @@
             <directory>src/Ssh</directory>
         </whitelist>
     </filter>
+
+    <groups>
+        <exclude>
+            <group>functional</group>
+        </exclude>
+    </groups>
 </phpunit>
