--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,6 @@ php:
   - 5.4
   - 5.5
   - 5.6
- 
-matrix:
-  allow_failures:
-    - php: 5.6
 
 before_script:
   - sudo apt-get install -y -qq libssh2-1-dev libssh2-php
@@ -16,3 +12,8 @@ before_script:
   - php -m | grep ssh2
   - composer self-update
   - composer install --dev
+  - echo `whoami`":1234" | chpasswd
+
+script:
+  - phpunit --coverage-text
+  - phpunit --group functional
