--- a/tests/bootstrap.php.dist
+++ b/tests/bootstrap.php.dist
@@ -7,4 +7,7 @@ if (!file_exists($filename)) {
     exit(1);
 }
 
+define('TEST_USER', get_current_user());
+define('TEST_PASSWORD', '1234');
+
 require_once $filename;
