--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "ext-ssh2": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "3.7.*",
+        "symfony/filesystem": "~2.4"
     },
     "autoload": {
         "psr-0": {
