--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,10 @@
         "psr-0": {
             "Ssh": "src/"
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.x-dev"
+        }
     }
 }
