--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,14 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2",
-        "ext-ssh2": "*"
+        "php": ">=5.3.2"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
         "symfony/filesystem": "~2.4"
+    },
+    "suggest": {
+        "ext-ssh2": "To use php-ssh install ssh2 extension"    
     },
     "autoload": {
         "psr-0": {
