Cleaning for PR

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name":         "flavienaudin/php-ssh",
+    "name":         "herzult/php-ssh",
     "type":         "library",
-    "description":  "Provides an object-oriented wrapper for the php ssh2 extension. SCP included",
+    "description":  "Provides an object-oriented wrapper for the php ssh2 extension.",
     "keywords":     ["ssh", "ssh2"],
     "license":      "MIT",
     "authors": [
@@ -12,10 +12,6 @@
         {
             "name":     "The contributors",
             "homepage": "http://github.com/Herzult/php-ssh/contributors"
-        },
-        {
-            "name":     "Flavien Audin",
-            "homepage": "https://github.com/flavienaudin/php-ssh"
         }
     ],
     "require": {
