--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2",
+        "php": "^7.1",
         "ext-ssh2": "*"
     },
     "require-dev": {
