--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <phpunit backupGlobals="false"
          backupStaticAttributes="false"
          colors="true"
@@ -9,8 +8,7 @@
          processIsolation="false"
          stopOnFailure="false"
          syntaxCheck="false"
-         bootstrap="tests/bootstrap.php.dist"
->
+         bootstrap="tests/bootstrap.php.dist">
     <testsuites>
         <testsuite name="SSH Library Test Suite">
             <directory>./tests</directory>
@@ -19,7 +17,7 @@
 
     <filter>
         <whitelist>
-            <directory>src/Ssh</directory>
+            <directory>src</directory>
         </whitelist>
     </filter>
 
