--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,11 @@
             "Ssh\\": "src/Ssh/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "SshTest\\": "tests/"
+        }
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "1.1.x-dev",
