--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,11 @@
     },
     "require-dev": {
         "ext-sockets": "*",
+        "ext-mbstring": "*",
         "phpunit/phpunit": "^10.0",
-        "symfony/filesystem": "^6.0"
+        "symfony/filesystem": "^6.0",
+        "vimeo/psalm": "^5.9",
+        "phpspec/prophecy-phpunit": "^1.0"
     },
     "autoload": {
         "psr-4": {
