--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,21 @@
 {
-    "name":         "luka/php-ssh",
-    "type":         "library",
-    "description":  "Provides an object-oriented wrapper for the php ssh2 extension.",
-    "keywords":     ["ssh", "ssh2"],
-    "license":      "MIT",
+    "name": "luka/php-ssh",
+    "type": "library",
+    "description": "Provides an object-oriented wrapper for the php ssh2 extension.",
+    "keywords": [
+        "ssh",
+        "ssh2"
+    ],
+    "license": "MIT",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "authors": [
         {
             "name": "Antoine Hérault",
             "homepage": "https://github.com/Herzult"
         },
         {
-            "name":     "herzult/php-ssh contributors",
+            "name": "herzult/php-ssh contributors",
             "homepage": "http://github.com/Herzult/php-ssh/contributors"
         },
         {
@@ -18,7 +23,7 @@
             "homepage": "http://www.luka.de/"
         },
         {
-            "name":     "luka/php-ssh contributors",
+            "name": "luka/php-ssh contributors",
             "homepage": "http://github.com/lukanetconsult/php-ssh/contributors"
         }
     ],
@@ -32,7 +37,7 @@
         "phpunit/phpunit": "^10.0",
         "symfony/filesystem": "^6.0",
         "vimeo/psalm": "^5.9",
-        "phpspec/prophecy-phpunit": "^1.0"
+        "phpspec/prophecy-phpunit": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -46,7 +51,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-latest": "2.1.x-dev"
+            "dev-latest": "3.0.x-dev"
         }
     }
 }
